# fastapi-sample

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
sample/: routes.py  volumesRouter.py
sample/database/: base_repository.py  data_models.py  db.py
sample/volumes/: v0_volumes.py  v1_volumes.py
sample/volumes/models/: volumes.py
sample/volumes/repository/: volume_repository.py
sample/volumes/services/: volume_actions_service.py  volume_service.py
