[project]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = [
    {name = "Hediberto C Silva",email = "hed.cavalcante@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "asyncpg (==0.31.0)",
    "click (==8.3.1)",
    "fastapi (==0.128.0)",
    "fastapi-versionizer (==4.0.2)",
    "greenlet (==3.3.0)",
    "h11 (==0.16.0)",
    "idna (==3.11)",
    "natsort (==8.4.0)",
    "pydantic (==2.12.5)",
    "pydantic-core (==2.41.5)",
    "sqlalchemy (==2.0.45)",
    "starlette (==0.50.0)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "uvicorn (==0.40.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
